@@ -107,7 +107,7 @@ static int __pipe_output_handler (int bminor,
 int __pipe_pkg_init (void)
 
 {
-    __pipe_flush_srq = rthal_request_srq(&__pipe_flush_handler);
+    __pipe_flush_srq = rthal_request_srq(&__pipe_flush_handler,NULL);
 
     if (__pipe_flush_srq <= 0)
 	return -EBUSY;
