@@ -1,3 +1,13 @@
+2005-04-11  Philippe Gerum  <rpm@xenomai.org>
+
+	* skins/rtai/pipe.c (__pipe_flush_handler): Release the superlock
+	while cycling on the flush queue.
+	(__pipe_flush): Do _not_ free the stream buffer in the flush
+	handler: it's the output handler's business.
+
+	* include/nucleus/asm-*/hal.h: Make sysreq-related prototypes and
+	names more consistent.
+	
 2005-04-10  Philippe Gerum  <rpm@xenomai.org>
 
 	* arch/*/hal/hal.c (rthal_request_linux_irq,
